Refine User Interface

--- a/themes/custom/prds/src/sass/base/_base.scss
+++ b/themes/custom/prds/src/sass/base/_base.scss
@@ -1,3 +1,5 @@
+$primary-color: rgba(39,97,163, 1);
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -15,7 +17,7 @@ html {
 body {
   font-size: 16px;
   font-style: normal;
-  font-weight: 300;
+  font-weight: 400;
   overflow-x: hidden;
 }
 
