--- a/themes/custom/prds/src/sass/prds.scss
+++ b/themes/custom/prds/src/sass/prds.scss
@@ -1,6 +1,14 @@
 @import "base/utils";
 @import "base/base";
-@import "component/header";
-@import "component/main-menu";
-@import "component/main-content";
+@import "base/typography";
+@import "component/admin";
+@import "component/faq";
 @import "component/footer";
+@import "component/frontpage";
+@import "component/header";
+@import "component/main-content";
+@import "component/main-menu";
+@import "component/media";
+@import "component/news";
+@import "component/search";
+@import "component/trainings";
