--- a/themes/custom/prds/src/sass/prds.scss
+++ b/themes/custom/prds/src/sass/prds.scss
@@ -2,10 +2,10 @@
 @import "base/base";
 @import "base/typography";
 @import "component/admin";
-@import "component/faq";
 @import "component/footer";
 @import "component/frontpage";
 @import "component/header";
+@import "component/knowledge-base";
 @import "component/main-content";
 @import "component/main-menu";
 @import "component/media";
