--- a/themes/custom/prds/src/sass/component/_footer.scss
+++ b/themes/custom/prds/src/sass/component/_footer.scss
@@ -1,15 +1,27 @@
 .region-footer {
+  padding: 3rem 115px;
+
   background: #00578a;
   background: linear-gradient(0deg, rgba(0,87,138,1) 10%, rgba(0,0,0,0) 100%), url("/themes/custom/prds/images/footer-bg_lg.jpg") no-repeat center center; 
   background-size: cover;
-  min-height: 400px;
 
-  .menu--footer {
+  .field--name-body {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
+    flex-wrap: wrap;
+    background-color: rgba(255,255,255,0.6);
+    padding: 1rem;
 
-    background: #E6E7E8;
-    padding: 0 2rem;
+    article {
+      flex: 0 1 calc(25% - 3rem);
+      
+      img,
+      picture {
+        max-height: 65px;
+        display: block;
+        margin: auto;
+      }
+    }
   }
 }
