--- a/themes/custom/prds/src/sass/component/_frontpage.scss
+++ b/themes/custom/prds/src/sass/component/_frontpage.scss
@@ -16,12 +16,11 @@
 }
 
 .path-frontpage .block-field-blocknodelanding-pagebody {
-  padding: 3rem 115px;
+  padding: 3rem 110px;
 
   button {
     background-color: $primary-color;
     border: 0;
-    border-radius: 3px;
     font-weight: bold;
     color: white;
     padding: 1rem;
@@ -30,8 +29,8 @@
   }
 }
 
-.path-frontpage .block-field-blocknodelanding-pagefield-department-image {
-  padding: 3rem 115px;
+.path-frontpage .block-field-blocknodelanding-pagefield-billboard-image {
+  padding: 3rem 110px;
 
 }
 
@@ -43,21 +42,92 @@
 }
 
 .path-frontpage .layout--threecol-section {
-  background-color: #f5f5f2;
-  padding: 2rem 115px;
+  background-color: #f6f6f6;
+  padding: 2rem 110px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+
+  .layout__region {
+    flex: 0 1 calc(33% - 1rem);
+  }
+
+  h2 {
+    color: #1a1a1a;
+    font-size: 21px;
+  }
 }
 
-.path-frontpage .layout--threecol-section .layout__region--first {
-  padding-right: 3rem;
-}
+.path-frontpage .layout--onecol .layout__region--content {
+  padding-bottom: 0;
 
-.path-frontpage .layout--threecol-section .layout__region--third {
-  padding-left: 3rem;
+  h2 {
+    margin: 1rem 0 0;
+  }
 }
 
 .path-frontpage .layout--fourcol-section {
+  padding: 2rem 110px;
   background: white;
-  background: url("/themes/custom/prds/images/cycle-bg.svg") no-repeat center center; 
-  background-size: contain;
   min-height: 325px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+
+  .layout__region {
+    background: white;
+    overflow: hidden;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+
+    flex: 0 1 calc(25% - 1rem);
+  }
+
+  h2 {
+    background: $primary-color;
+    color: white;
+    padding: 1rem;
+    text-align: center;
+    min-height: 98px;
+    position: relative;
+
+    span {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 21px;
+      font-weight: 800;
+    }
+  }
+
+  ul {
+    padding: 0 1rem 1rem;
+
+    ul {
+      padding: 0;
+    }
+  }
+
+  li {
+    list-style-image: url("/themes/custom/prds/images/cycle-bg.svg");
+    line-height: 1.1;
+    padding-bottom: 1rem;
+
+    li {
+      padding-bottom: 0;
+      padding-top: 1rem;
+    }
+  }
+
+  a,
+  a:visited {
+    text-decoration: none;
+    color: #1a1a1a;
+
+    &:hover,
+    &:focus {
+      text-decoration: underline;
+      color: $primary-color;
+    }
+  }
 }
