--- a/themes/custom/prds/src/sass/component/_news.scss
+++ b/themes/custom/prds/src/sass/component/_news.scss
@@ -1,35 +1,41 @@
-.news--item {
+.news--item,
+.resource--item {
   list-style-type: none;
-  box-shadow: 0 3px 7px -1px rgba(0, 0, 0, 0.1);
+  // box-shadow: 0 3px 7px -1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
   margin-bottom: 1rem;
   background: #fff;
   line-height: 1.4;
   font-family: sans-serif;
-  border-radius: 5px;
+  // border-radius: 5px;
   display: flex;
+  flex-direction: column;
   overflow: hidden;
 
   img {
-    width: 25%;
-    height: auto;
+    width: 100%;
+    min-height: 200px;
+    max-height: 300px;
     object-fit: cover;
   }
 }
 
-.news-copy {
-  flex-basis: 75%;
+.news-copy,
+.resource--item {
   padding: 1rem;
-
+  
   h3 {
     line-height: 1;
+    margin: 0;
+  }
 
-    a {
-      text-decoration: none;
-      color: #1a1a1a;
-    }
+  a {
+    text-decoration: none;
+    color: #1a1a1a;
   }
 
   p {
     font-size: 1rem;
+    margin-top: 1.5rem;
   }
 }
