--- a/themes/custom/prds/src/sass/component/_search.scss
+++ b/themes/custom/prds/src/sass/component/_search.scss
@@ -1,8 +1,6 @@
 .region-header .views-exposed-form {
   background-color: #fff;
-  border-radius: 3px;
   height: 60px;
-  margin: 0;
   max-width: 100%;
   display: flex;
   align-items: center;
@@ -29,16 +27,15 @@
     background-image: none;
   }
   
-  .form-search {
+  .form-text {
     padding-left: 1rem;
-    border: 1px solid black;
+    border: 1px solid #e6ecf1;
   }
   .form-submit {
     padding: 1rem;
     background: $border-color;
     border: 0;
-    text-transform: uppercase;
     font-weight: bold;
-    border: 1px solid black;
+    border: 1px solid #e6ecf1;
   }
 }
