Update theme and config

--- a/themes/custom/prds/src/sass/base/_base.scss
+++ b/themes/custom/prds/src/sass/base/_base.scss
@@ -41,5 +41,23 @@ img {
 }
 
 :focus {
-  outline-color: $primary-color;
+  outline-color: #e77500;
+}
+
+button,
+.button {
+  background-color: $primary-color;
+  border: 0;
+  font-weight: bold;
+  color: white;
+  padding: 1rem;
+  margin-top: 1rem;
+  display: inline-block;
+  text-decoration: none;
+
+  &:hover,
+  &:focus {
+    background-color: lighten($primary-color, 5%);
+    color: white;
+  }
 }
