--- a/themes/custom/prds/src/sass/base/_typography.scss
+++ b/themes/custom/prds/src/sass/base/_typography.scss
@@ -82,7 +82,7 @@ p {
 
   word-wrap: break-word;
   overflow-wrap: break-word;
-  max-width: 100ch;
+  // max-width: 100ch;
 
   &:last-of-type {
       margin-bottom: 0;
