--- a/themes/custom/prds/src/sass/component/_main-content.scss
+++ b/themes/custom/prds/src/sass/component/_main-content.scss
@@ -1,3 +1,66 @@
 .layout-content {
   padding: 2rem 110px;
 }
+
+.page-node-type-page .layout-content {
+  background: white;
+  background: linear-gradient(60deg, rgba(255,255,255,1) 45%, rgba(0,212,255,0) 100%), url("/themes/custom/prds/images/nodes-bg.svg") no-repeat; 
+  background-size: 1440px 1000px;
+  background-position: right -500px top -200px;
+}
+
+.page-node-type-page .layout--onecol {
+  margin-bottom: 2rem;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.page-node-type-page .field--name-body {
+  ul {
+    margin: 0 0 2rem 4rem;
+  }
+
+  p {
+    margin-bottom: 2rem;
+  }
+}
+
+.node__content .media.align-left {
+  padding: 0 2rem 2rem 0;
+}
+
+.prds-staff-list {
+  margin: auto;
+  max-width: 1440px;
+
+  .prds-media {
+    display: flex;
+    align-items: flex-start;
+    padding-bottom: 2rem;
+    border-bottom: 1px solid #e6ecf1;
+    margin-bottom: 2rem;
+
+    &:last-child {
+      border: 0;
+    }
+  }
+  
+  .prds-media_text {
+    flex: 1;
+  }  
+
+  h3 {
+    margin-bottom: 0;
+    color: #1a1a1a;
+  }
+
+  .prds-staff-title {
+    font-weight: 700;
+  }
+
+  .prds-staff-email {
+    margin: 1rem 0;
+  }
+}
