--- a/themes/custom/prds/src/sass/prds.scss
+++ b/themes/custom/prds/src/sass/prds.scss
@@ -16,3 +16,6 @@
 @import "component/news";
 @import "component/search";
 @import "component/trainings";
+
+@import "component/bs-grid";
+@import "component/toc";
