Updates search results display and config

--- a/themes/custom/prds/src/sass/component/_frontpage.scss
+++ b/themes/custom/prds/src/sass/component/_frontpage.scss
@@ -145,6 +145,7 @@
     text-align: center;
     min-height: 98px;
     position: relative;
+    margin-top: 0;
 
     span {
       position: absolute;
