--- a/themes/custom/prds/src/sass/prds.scss
+++ b/themes/custom/prds/src/sass/prds.scss
@@ -14,6 +14,7 @@
 @import "component/main-menu";
 @import "component/media";
 @import "component/news";
+@import "component/resources";
 @import "component/search";
 @import "component/trainings";
 
