--- a/themes/custom/prds/src/sass/component/_frontpage.scss
+++ b/themes/custom/prds/src/sass/component/_frontpage.scss
@@ -2,6 +2,11 @@
   @include sr-only;
 }
 
+.path-frontpage h2,
+.path-frontpage h3 {
+  font-weight: 700;
+}
+
 .path-frontpage .layout-content {
   padding: 0;
 }
