--- a/themes/custom/prds/src/sass/component/_frontpage.scss
+++ b/themes/custom/prds/src/sass/component/_frontpage.scss
@@ -205,12 +205,14 @@
   }
 }
 
-.more-link {
+.more-link,
+.more-link:visited {
   text-align: left;
   text-decoration: none;
 
   &:hover,
   &:focus {
     text-decoration: underline;
+    color: $color-secondary;
   }
 }
