--- a/themes/custom/prds/src/sass/component/_buttons.scss
+++ b/themes/custom/prds/src/sass/component/_buttons.scss
@@ -9,6 +9,7 @@ button,
   margin-top: 1rem;
   display: inline-block;
   text-decoration: none;
+  text-align: center;
   width: 100%;
 
   @media (min-width: $bp-small) {
