--- a/themes/custom/prds/src/sass/component/_frontpage.scss
+++ b/themes/custom/prds/src/sass/component/_frontpage.scss
@@ -81,6 +81,7 @@
   h2 {
     color: $color-secondary;
     font-size: $base-font-size * 1.3;
+    margin-top: 0;
   }
 }
 
@@ -129,13 +130,14 @@
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     margin-bottom: 1rem;
 
-    &:last-child {
-      margin-bottom: 0;
+    @media (max-width: 40em) {
+      &:last-child {
+        margin-bottom: 0;
+      }
     }
 
-    @media (min-width: $bp-medium) {
+    @media screen and (min-width: 40em) {
       flex: 0 1 calc(50% - 1rem);
-      margin-bottom: 0;
     }
 
     @media (min-width: $bp-large) {
