--- a/themes/custom/prds/src/sass/component/_news.scss
+++ b/themes/custom/prds/src/sass/component/_news.scss
@@ -35,6 +35,7 @@
 
     a {
       position: static;
+      font-size: 16px;
 
       &::before {
         bottom: 0;
@@ -77,13 +78,7 @@
   }
 }
 
-.page-node-type-article p {
-  max-width: 100ch;
-  margin: $paragraph-margin auto;
-  font-size: 1.1rem;
-}
-
-.page-node-type-article ul {
+.page-node-type-article .field--name-body {
   max-width: 100ch;
   margin: $paragraph-margin auto;
   font-size: 1.1rem;
