--- a/themes/custom/prds/src/sass/component/_resources.scss
+++ b/themes/custom/prds/src/sass/component/_resources.scss
@@ -51,6 +51,7 @@
       position: static;
       text-decoration: none;
       color: $color-secondary;
+      font-size: 16px;
 
       &:hover,
       &:focus {
